refactor(Lotto): 생성자 List.copyOf()사용으로 변경